<resources>
    <string name="app_name">Person CRUD</string>
    <string name="surname">Surname</string>
    <string name="firstname">First name</string>
    <string name="addNewPerson">Save person</string>
    <string name="family_name">Family Name</string>
    <string name="given_name">Given name</string>
    <string name="phone_number">Phone number</string>
    <string name="gender_type">Gender</string>
    <string name="unknown">Unknown</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="address">Address</string>
    <string name="birth_date">Birth Date</string>
    <string name="managing_organization">Managing Organization</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="active">Active</string>
    <string name="link">link</string>
    <string name="deletePerson">Delete Person</string>
    <string name="listAll">List all person</string>
    <string name="exit">Exit</string>
    <string name="edit">Edit</string>
</resources>