<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="8dp"
    android:layout_margin="@dimen/default_margin_side">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/family_name"
            android:textSize="14sp"
            android:padding="@dimen/default_margin_side"
            android:id="@+id/familyNameId"
            android:layout_weight="3"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/given_name"
            android:textSize="14sp"
            android:padding="@dimen/default_margin_side"
            android:id="@+id/givenNameId"
            android:layout_weight="3"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textSize="14sp"
            android:padding="@dimen/default_margin_side"
            android:id="@+id/phoneNumberId"
            android:layout_weight="3"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textSize="14sp"
            android:padding="@dimen/default_margin_side"
            android:id="@+id/uid"
            android:visibility="gone"
            android:layout_weight="0"/>


        <Button
            android:id="@+id/editButton"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:layout_weight="1"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>